[package]
edition = "2021"
name = "emacs-native-async"
version = "0.2.0"
license = "GPL-3.0-or-later"
description = "module enabling to signal completion of parallel processes to Emacs"
homepage = "https://github.com/RobinMarchart/emacs-native-async"
repository = "https://github.com/RobinMarchart/emacs-native-async"
[dependencies]
libc = "^0.2.119"
anyhow = "^1.0"
emacs = "^0.18"
parking_lot="^0.4.6"
abi_stable="^0.10.4"
[workspace]
members=["native-setup","setup-bin"]
