[package]
name = "native-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emacs = "0.18"
emacs-native-async = {path = ".."}
libc = "0.2.119"
anyhow = "1.0"
abi_stable="^0.10.4"
parking_lot="^0.4.6"

[lib]
crate-type = ["cdylib"]
